# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   title: "emojiApp"
   version: "0.0.1"
  
-host: "3.18.139.243:5001"
+host: "localhost:5001"
 basePath: "/emojiApp/v2/api"
 consumes:
 - "application/x-www-form-urlencoded"
@@ -383,6 +383,12 @@ paths:
         tags:
         - "user"
         summary: Edit profile request
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        
+        
         parameters: 
           - in: header
             name: authorization
@@ -394,19 +400,28 @@ paths:
             description: Id of particular user
             required: true
             type: string
-          - in: body
-            name: body
-            required: true
-            schema:
-              type: object
-              required:
-                - userName
-                - image
-              properties:
-                userName:
-                  type: string
-                image:
-                  type: string
+          - name: "contactNumber"
+            in: "formData"
+            description: "phone number of user."
+            type: "string"
+          - name: "isdCode"
+            in: "formData"
+            description: "countryCode of user."
+            type: "string"
+          - name: "emailId"
+            in: "formData"
+            description: "emailId  of  the user."
+            type: "string"
+          - name: "userName"
+            in: "formData"
+            description: "userName of the user."
+            type: "string"
+          - name: "fullName"
+            in: "formData"
+            description: "fullName of the user."
+            type: "string"
+          
+
         responses:
           "200":
             description: "Succesfully edited"
@@ -449,6 +464,90 @@ paths:
             description: "internal server error"
             schema:
               $ref: "#/definitions/UserNotFound" 
+  "/user/groupIconUpload/{id}":
+    post:
+      tags:
+      - "user"
+      summary: "uploads an image"
+      description: ""
+      operationId: "uploadGroupImage"
+      consumes:
+      - "multipart/form-data"
+      produces:
+      - "application/json"
+      parameters:
+      - in: header
+        name: authorization
+        description: Token of particular user
+        required: true
+        type: string
+      - name: "img"
+        in: "formData"
+        description: "file to upload"
+        required: false
+        type: "file"
+       
+      - in: path
+        name: id
+        description: Id of particular user
+        required: true
+        type: string
+        
+      responses:
+          "200":
+            description: "Sucess"
+            schema:
+              $ref: "#/definitions/imageUpload"           
+          "400":
+            description: "internal server error"
+            schema:
+              $ref: "#/definitions/UserNotFound" 
+              
+              
+ 
+        
+               
+      
+  "/user/addcontactUs/{id}":
+      post:
+        tags:
+        - "user"
+        summary:  add contactUs pages request
+        consumes:
+        - "multipart/form-data"
+        produces:
+        - "application/json"
+        parameters: 
+          - in: header
+            name: authorization
+            description: Token of particular admin
+            required: true
+            type: string
+          - in: path
+            name: id
+            description: Id of particular user
+            required: true
+            type: string
+          - name: "subject"
+            in: "formData"
+            description: "subject for contactUs"
+            required: false
+            type: "string" 
+          - name: "message"
+            in: "formData"
+            description: "message for contactUs"
+            required: false
+            type: "string"
+               
+        responses:
+          "200":
+            description: "Successfully Added"
+            schema:
+              $ref: "#/definitions/UserNotFound"
+          "400":
+            description: "Invalid user"
+            schema:
+              $ref: "#/definitions/UserNotFound"
                
   # "/user/imageUpload":
   #     post:
@@ -869,8 +968,8 @@ paths:
             required: true
             type: string
           - in: body
-            name: admin
-            description: add about us page.
+            name: body
+            description: add description of about us page.
             schema:
               type: object
              
@@ -889,6 +988,7 @@ paths:
             description: "Invalid user"
             schema:
               $ref: "#/definitions/UserNotFound"
+
   "/admin/addKeyboard/{id}":
       post:
         tags:
@@ -993,8 +1093,7 @@ paths:
             schema:
               type: object
               properties:
-                title:
-                    type: string
+              
                 description:
                     type: string
         responses:
@@ -1006,7 +1105,39 @@ paths:
             description: "Invalid user"
             schema:
               $ref: "#/definitions/UserNotFound"
+  "/admin/updatecontactUs/{id}":
+      put:
+        tags:
+        - "admin"
+        summary: Edit contactUs request
+        parameters: 
+          - in: header
+            name: authorization
+            description: Token of particular admin
+            required: true
+            type: string
+          - in: path
+            name: id
+            description: Id of particular cms page
+            required: true
+            type: string
+          - in: body
+            name: body
+            schema:
+              type: object
+              properties:
               
+                description:
+                    type: string
+        responses:
+          "200":
+            description: "Succesfully edited"
+            schema:
+              $ref: "#/definitions/UserNotFound"
+          "400":
+            description: "Invalid user"
+            schema:
+              $ref: "#/definitions/UserNotFound"          
   "/admin/updateCategory/{id}":
       put:
         tags:
@@ -1158,7 +1289,27 @@ paths:
             description: "User not found."
             schema:
               $ref: "#/definitions/UserNotFound"   
-    
+                
+  "/admin/getcontactUs":
+      get:
+        tags:
+        - "admin"
+        summary: Get list of contact us pages.
+        parameters: 
+          - in: header
+            name: authorization
+            description: Token of particular admin
+            required: true
+            type: string
+        responses:
+          "200":
+            description: "Sucess"
+            schema:
+              $ref: "#/definitions/UserNotFound"           
+          "400":
+            description: "User not found."
+            schema:
+              $ref: "#/definitions/UserNotFound"     
               
   "/admin/getAllKeyboardDetails":
       get:
