# lib/user/userRoute.js
@@ -29,25 +29,33 @@ userRouter.route("/checkNumberExist")
             return res.json(data)
         })
     })
-// userRouter.post("/imageUpload", (req, res) => {
-//     userService.imageUpload(req, res)
-// })
-
-
 userRouter.route("/imageUpload/:id")
     .post((req, res) => {
         userService.imageUpload(req, res).then((data) => {
-            console.log("Data",data)
             return res.json(data)
         })
     })
-
 userRouter.post("/syncContacts", (req, res) => {
     userService.syncContacts(req, res)
 })
-
-
-
+userRouter.route("/editProfile/:id")
+    .put([upload.none(), validate.verifyToken], (req, res) => {
+        userService.editProfile(req, res).then((data) => {
+            return res.json(data)
+        })
+    })
+userRouter.route("/groupIconUpload")
+    .post([validate.verifyToken], (req, res) => {
+        userService.groupIconUpload(req, res).then((data) => {
+            return res.send(data)
+        })
+    })
+userRouter.route("/addcontactUs/:id")
+    .post([upload.none(),validate.verifyToken,validate.ValidateContactUs], (req, res) => {
+        userService.addcontactUs(req, res).then((data) => {
+            return res.json(data)
+        })
+    })
 //<---------------------------------------------------------------Updated Api`s ended--------------------------------------------------------------------------------------------------------------------------------->
 
 
@@ -74,13 +82,6 @@ userRouter.route("/changePassword/:id")
             return res.send(data)
         })
     })
-userRouter.route("/editProfile/:id")
-    .put([validate.verifyToken], (req, res) => {
-        userService.editProfile(req, res).then((data) => {
-            return res.json(data)
-        })
-    })
-
 userRouter.post("/socialLogin", (req, res) => {
     userService.socialLogin(req, res).then((data) => {
         return res.json(data)
