# lib/user/userValidator.js
@@ -36,21 +36,30 @@ function ValidateNumberExist(req, res, next) {
 	}
 }
 
+function ValidateContactUs(req, res, next) {
+
+	if (req.body.subject && req.body.message) {
+		next();
+	}
+	else {
+		return res.json({ status: false, statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.invalidBody, data: {}})
+	}
+}
 
 function verifyToken(req, res, next) {
 	var token = req.headers['authorization'];
 
 	if (!token) {
-		return res.json({status:false, statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.tokenNotPrvided,data:{} })
+		return res.json({ status: false, statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.tokenNotPrvided, data: {} })
 	}
 	else {
 		jwtHndlr.verifyUsrToken(token).then((result) => {
 			if (result) {
 				next();
 			} else {
-				return res.json({ status:false,statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.internalServerError,data:{} })
+				return res.json({ status: false, statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.internalServerError, data: {} })
 			}
-		}).catch(err => { return res.json({status:false,statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.inValidToken,data:{} }) })
+		}).catch(err => { return res.json({ status: false, statusCode: userConst.CODES.FAILURECASE, message: userConst.MESSAGES.inValidToken, data: {} }) })
 	}
 }
 
@@ -61,8 +70,8 @@ function verifyToken(req, res, next) {
 
 
 function validateverifyAccount(req, res, next) {
-	if (req.body.pin) {
-		next();
+	if (req.body.emailId) {
+				next();
 	}
 	else {
 		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
@@ -78,6 +87,7 @@ function validateForgotPassword(req, res, next) {
 		return res.json({ code: userConst.CODES.BADREQUEST, message: userConst.MESSAGES.invalidBody })
 	}
 }
+
 function validatechangePassword(req, res, next) {
 
 	if (req.body.oldPassword && req.body.newPassword) {
@@ -96,6 +106,7 @@ module.exports = {
 	ValidateLogin,
 	validateForgotPassword,
 	validatechangePassword,
-	ValidateNumberExist
+	ValidateNumberExist,
+	ValidateContactUs
 }
 
